test(server): add test setup file and graphql test utils
Added gqlCall, a function that allows us to make graphql calls in our tests. Also added a mock setup
file that is currently a placeholder for setting up our test database for future tests.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -84,6 +84,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/test/setup.ts"
     ]
   }
 }
