--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,7 +17,7 @@
     "check:format": "prettier --check .",
     "check:types": "tsc --pretty --noEmit",
     "check:all": "yarn check:format && yarn lint && yarn check:types && yarn test && yarn build",
-    "gen-env": "gen-env-types .",
+    "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
     "typeorm:cli": "../../node_modules/typeorm cli -f ./src/lib/config/typeorm.config.ts",
     "table:create": "yarn run typeorm:cli -- migration:run",
     "table:drop": "yarn run typeorm:cli -- migration:revert"
