feat(server): added user resolver, register mutation, sessions, email, and test database connection
Created the User resolver and added the register mutation and getCurrentUser query. Wired up redis
and express-session for caching and authentication, respectively. Also set up the test database
connection and wrote an initial test for the register mutation. Removed the Hello World test
resolver.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
     "table:drop": "yarn run typeorm:cli -- migration:revert"
   },
   "dependencies": {
+    "@monorepo/yup-schemas": "workspace:*",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
     "class-validator": "^0.13.2",
@@ -84,9 +85,6 @@
       "jsx",
       "json",
       "node"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/test/setup.ts"
     ]
   }
 }
