feat(global): add custom errors to errors package and format graphql errors on server

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
     "table:drop": "yarn run typeorm:cli -- migration:revert"
   },
   "dependencies": {
+    "@monorepo/errors": "workspace:*",
     "@monorepo/yup-schemas": "workspace:*",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
