--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf ./dist && tsc",
     "build:watch": "rimraf ./dist && tsc -w",
     "start": "NODE_ENV=production node dist/src/index.js",
-    "dev": "NODE_ENV=development nodemon --delay 500ms dist/src/index.js",
+    "dev": "NODE_ENV=development nodemon --delay 500ms src/index.ts",
     "db:setup-test": "ts-node ./src/test/setup.ts",
     "test": "NODE_ENV=test yarn run db:setup-test && jest --detectOpenHandles --runInBand",
     "test:watch": "NODE_ENV=test yarn run db:setup-test && jest --watch",
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dataloader": "^2.1.0",
     "dotenv": "^16.0.1",
+    "email-templates": "^9.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "graphql": "^15.8.0",
@@ -40,6 +41,7 @@
     "ioredis": "^5.0.5",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
