ci(lint-staged/husky): add scripts to run tests/checks/etc. for workspaces, update lint-staged
Changed lint-staged to run tests, lint, format, type checks, and build only on workspaces whose src
files have changed. Added scripts to the workspaces root package.json to run these scripts
individually or all at once.

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,6 @@
 {
-  "**/*.{ts,tsx,js,jsx,json,md}": ["prettier --write", "prettier --check"],
-  "apps/**/*.{js,ts,jsx,tsx}": ["eslint --fix"],
-  "packages/**/*.{js,ts,jsx,tsx}": ["eslint --fix"]
+  "**/*.{ts,tsx,js,jsx,json,md,pug}": ["prettier --write", "prettier --check"],
+  "apps/server/src/**/*.{ts,tsx,js,jsx,json}": ["server:check:all"],
+  "packages/errors/src/**/*.{ts,tsx,js,jsx,json}": ["errors:check:all"],
+  "packages/yup-schemas/src/**/*.{ts,tsx,js,jsx,json}": ["yup-schemas:check:all"]
 }
