--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -53,6 +53,7 @@
     "@monorepo/config": "workspace:*",
     "@monorepo/tsconfig": "workspace:*",
     "@types/connect-redis": "^0.0.18",
+    "@types/email-templates": "^8.0.4",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.5.1",
