--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,22 +5,25 @@
   "description": "The server for the AirBnB clone",
   "main": "dist/src/index.js",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "build:watch": "rimraf ./dist && tsc -w",
-    "start": "NODE_ENV=production node dist/src/index.js",
-    "dev": "NODE_ENV=development nodemon --delay 500ms src/index.ts",
-    "db:setup-test": "ts-node ./src/test/setup.ts",
+    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "NODE_ENV=development nodemon --delay 500ms dist/index.js",
     "test": "NODE_ENV=test yarn run db:setup-test && jest --detectOpenHandles --runInBand",
     "test:watch": "NODE_ENV=test yarn run db:setup-test && jest --watch",
+    "build": "yarn clean && tsc && yarn copy:all",
+    "build:watch": "yarn clean && concurrently \"tsc -w\" \"yarn copy:all\"",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "check:format": "prettier --check .",
     "check:types": "tsc --pretty --noEmit",
     "check:all": "yarn check:format && yarn lint && yarn check:types && yarn test && yarn build",
-    "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
     "typeorm:cli": "../../node_modules/typeorm cli -f ./src/lib/config/orm.config.ts",
     "table:create": "yarn run typeorm:cli -- migration:run",
-    "table:drop": "yarn run typeorm:cli -- migration:revert"
+    "table:drop": "yarn run typeorm:cli -- migration:revert",
+    "db:setup-test": "ts-node ./src/test/setup.ts",
+    "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
+    "clean": "rimraf ./dist",
+    "copy:all": "yarn copy-emails",
+    "copy-emails": "copyfiles -u 1 \"./src/**/*.pug\" ./dist/ && echo \"Copied email templates to dist\""
   },
   "dependencies": {
     "@monorepo/errors": "workspace:*",
@@ -60,6 +63,8 @@
     "@types/node": "^17.0.34",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
+    "concurrently": "^7.2.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.15.0",
     "gen-env-types": "^1.3.4",
     "jest": "^28.1.0",
