--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -2,8 +2,8 @@
   "name": "@monorepo/errors",
   "version": "1.0.0",
   "description": "Custom errors for monorepo",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && tsc",
@@ -13,7 +13,7 @@
     "check:lint": "yarn run lint",
     "check:format": "prettier --check .",
     "check:types": "tsc --pretty --noEmit",
-    "check:all": "yarn run check:format && yarn run check:lint && yarn run check:types && yarn run test && yarn run build"
+    "check:all": "yarn run check:format && yarn run check:lint && yarn run check:types && yarn run test"
   },
   "devDependencies": {
     "@monorepo/config": "workspace:*",
