--- a/packages/errors/tsconfig.json
+++ b/packages/errors/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@monorepo/tsconfig/node.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "dist"
+    "rootDir": "./src",
+    "outDir": "./dist"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
