--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --write .",
     "check:format": "prettier --check .",
     "check:types": "tsc --pretty --noEmit",
-    "check:all": "yarn check:format && yarn lint && yarn check:types && yarn test",
+    "check:all": "yarn check:format && yarn lint && yarn check:types",
     "typeorm:cli": "../../node_modules/typeorm cli -f ./src/lib/config/orm.config.ts",
     "table:create": "yarn run typeorm:cli -- migration:run",
     "table:drop": "yarn run typeorm:cli -- migration:revert",
@@ -37,6 +37,7 @@
     "dotenv": "^16.0.1",
     "email-templates": "^9.0.0",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.3",
     "graphql": "^15.8.0",
     "graphql-query-complexity": "^0.11.0",
@@ -45,6 +46,7 @@
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
+    "rate-limit-redis": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
