--- a/packages/yup-schemas/package.json
+++ b/packages/yup-schemas/package.json
@@ -14,7 +14,7 @@
     "check:lint": "yarn run lint",
     "check:format": "prettier --check .",
     "check:types": "tsc --pretty --noEmit",
-    "check:all": "yarn run check:format && yarn run check:lint && yarn check:types && yarn run test"
+    "check:all": "yarn run check:format && yarn run check:lint && yarn check:types"
   },
   "dependencies": {
     "yup": "^0.32.11"
