--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -13,7 +13,7 @@
     "check:lint": "yarn run lint",
     "check:format": "prettier --check .",
     "check:types": "tsc --pretty --noEmit",
-    "check:all": "yarn run check:format && yarn run check:lint && yarn run check:types && yarn run test"
+    "check:all": "yarn run check:format && yarn run check:lint && yarn run check:types"
   },
   "devDependencies": {
     "@monorepo/config": "workspace:*",
