ci(husky): update pre-commit and pre-push hooks

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,8 +14,9 @@
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "check:format": "prettier --check .",
+    "check:lint": "eslint .",
     "check:types": "tsc --pretty --noEmit",
-    "check:all": "yarn check:format && yarn lint && yarn check:types",
+    "check:all": "yarn check:format && yarn check:lint && yarn check:types",
     "typeorm:cli": "../../node_modules/typeorm cli -f ./src/lib/config/orm.config.ts",
     "table:create": "yarn run typeorm:cli -- migration:run",
     "table:drop": "yarn run typeorm:cli -- migration:revert",
