--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "yarn run yup-schemas:test && yarn run errors:test && yarn run server:test",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "check:format": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "check:all": "yarn run yup-schemas:check:all && yarn run errors:check:all && yarn run server:check:all",
+    "check:lint": "yarn workspaces foreach -pvR --from '{@monorepo/server,@monorepo/yup-schemas,@monorepo/errors}' run check:lint",
+    "check:types": "yarn workspaces foreach -pvR --from '{@monorepo/server,@monorepo/yup-schemas,@monorepo/errors}' run check:types",
+    "check:all": "yarn workspaces foreach -pvR --from '{@monorepo/server,@monorepo/yup-schemas,@monorepo/errors}' run check:all",
     "server:build": "yarn workspace @monorepo/server run build",
     "server:test": "yarn workspace @monorepo/server run test",
     "server:lint": "yarn workspace @monorepo/server run lint",
