--- a/packages/yup-schemas/package.json
+++ b/packages/yup-schemas/package.json
@@ -11,8 +11,8 @@
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "check:lint": "yarn run lint",
     "check:format": "prettier --check .",
+    "check:lint": "eslint .",
     "check:types": "tsc --pretty --noEmit",
     "check:all": "yarn run check:format && yarn run check:lint && yarn check:types"
   },
