--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "yup-schemas:check:all": "yarn workspace @monorepo/yup-schemas run check:all"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.15.0",
