--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -53,6 +53,7 @@
     "typedi": "^0.10.0",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2",
+    "winston": "^3.7.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
