chore(server): run gen-env to update .env.example and env.d.ts

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,14 +1,16 @@
 PORT=
 DB_HOST=
 DB_PORT=
-DEV_DB=
-TEST_DB=
-PROD_DB=
 DB_USERNAME=
 DB_PASSWORD=
-EMAIL_USER=
-EMAIL_PASSWORD=
+DEV_DB=
+TEST_DB_USER=
+TEST_DB_PASSWORD=
+TEST_DB=
+PROD_DB=
 EMAIL_HOST=
 EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
 SESSION_SECRET=
 FRONTEND_URL=
